<resources>
    <string name="app_name">TAANID</string>
    <string name="usuario">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="botonLogin">Iniciar Sesión</string>
    <string name="botonInvitado">Iniciar como invitado</string>
    <string name="botonRegistro">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="fechaNac">Fecha de Nacimiento</string>
    <string name="botonAvatar">Elegir Avatar</string>
    <string name="leyenda">Los campos que llevan * son obligatorios</string>
    <string name="imagen_pelicula">Imagen de la película</string>
    <string name="avatar_usuario">Avatar del usuario</string>
    <string name="btnGuardar">Guardar cambios</string>
    <string name="CambiarAvatar">Cambiar avatar</string>
    <string name="esAdmin">¿Es administrador?</string>
    <string name="btnTrailer">Ver Tráiler</string>
    <string name="btnPelicula">Ver Película</string>
    <string name="comentarios">Comentarios</string>
    <string name="escribirComent">Escribe un comentario...</string>
    <string name="btnEnviar">Enviar</string>
    <string name="eliminarComent">Eliminar comentario</string>
    <string name="advertenciaComent">¿Estás seguro de que deseas eliminar este comentario?</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnSi">Sí</string>
    <string name="volverInicio">Volver al inicio</string>
    <string name="advertenciaInicio">¿Seguro que quieres cerrar sesión y volver a la pantalla de inicio?</string>
    <string name="btnEditarperfil">Editar perfil</string>
    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="nombrePeli">Nombre de la película</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="urlTrailer">URL del tráiler</string>
    <string name="urlPeli">URL de la película</string>
    <string name="btnSelecionarImagen">Seleccionar imagen</string>
    <string name="btnSubirPeli">Subir película</string>
    <string name="btnEliminar">Eliminar película</string>
    <string name="btnEditarPeli">Editar película</string>
    <string name="busquedaPeli">Buscar por título o sinopsis</string>
    <string name="btnFavorito">Mostrar Favoritos</string>
    <string name="completarImagen">Por favor, completa todos los campos y selecciona una imagen</string>
    <string name="existePeli">Ya existe una película con alguno de esos datos.</string>
    <string name="errorDuplicados">Error al verificar duplicados</string>
    <string name="peliGuardada">Película guardada</string>
    <string name="guardadoSinId">Guardada, pero no se pudo actualizar el ID</string>
    <string name="errorGuardad">Error al guardar</string>
    <string name="errorImagen">"Error al subir imagen: "</string>
    <string name="iniciarFavoritos">Debes iniciar sesión para añadir a favoritos</string>
    <string name="completarCampos">Por favor, completa todos los campos</string>
    <string name="errorSesion">Error de inicio de sesión:</string>
    <string name="sesionInvitado">No se pudo iniciar como invitado</string>
    <string name="errorPermisos">Error al verificar permisos</string>
    <string name="errorCargarPeli">Error al cargar películas</string>
    <string name="errorCargarFavoritos">Error al cargar favoritos</string>
    <string name="iniciarSesionEditar">Debes registrarte para editar tu perfil o cerrar sesión.</string>
    <string name="perfilActualizado">Perfil actualizado correctamente</string>
    <string name="avatarSelect">Avatar seleccionado</string>
    <string name="obligatorios">Correo, nombre y contraseña son obligatorios</string>
    <string name="registrado">Este correo ya está registrado</string>
    <string name="formatoFecha">Formato de fecha inválido. Usa dd/MM/yyyy</string>
    <string name="errorAvatar">Error al subir avatar:</string>
    <string name="errorRegistrar">Error al registrar:</string>
    <string name="errorVerificarCorreo">Error al verificar el correo:</string>
    <string name="registroBien">Registro exitoso</string>
    <string name="errorDatos">Error al guardar datos:</string>
    <string name="permisoDenegado">Permiso denegado para acceder a imágenes</string>
    <string name="noCambios">No se realizaron cambios</string>
    <string name="fechaInvalida">Fecha inválida</string>
    <string name="errorCambios">Error al guardar cambios</string>
    <string name="peliActualizada">Película actualizada</string>
    <string name="errorActualizar">Error al actualizar</string>
    <string name="peliEliminada">Película eliminada</string>
    <string name="errorPeliEliminada">Error al eliminar película</string>
    <string name="noTrailer">No hay tráiler disponible</string>
    <string name="noUrl">URL no válida</string>
    <string name="noPeli">No hay película disponible</string>
    <string name="iniciaPeli">Debes iniciar sesión para ver la película completa</string>
    <string name="iniciarComentar">Debes iniciar sesión para comentar</string>
    <string name="iniciarPuntuar">Debes iniciar sesión para puntuar</string>
    <string name="escribirComentoPuntar">Escribe un comentario o selecciona una puntuación</string>
    <string name="comentEnviado">Comentario enviado</string>
    <string name="errorComent">Error al enviar comentario</string>
    <string name="comentEliminado">Comentario eliminado</string>
    <string name="errorComentEliminado">Error al eliminar comentario</string>
    <string name="sinopsisEn">Sinopsis (English)</string>
    <string name="mostrarFavoritos">Mostrar Favoritos</string>
    <string name="mostrarTodo">Mostrar Todas</string>
    <string name="subirPeli">Subir Película</string>
</resources>